--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start the Game </h1>
+  <h1 id="level-title">Press A Key to Start the Game and try to not lose </h1>
   <div class="container">
     <div class="row">
 
